# ChangeLog for dev-ruby/icalendar
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2

*icalendar-1.1.3 (29 Mar 2010)

  29 Mar 2010; Hans de Graaff <graaff@gentoo.org> +icalendar-1.1.3.ebuild:
  Version bump.

  25 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial import
