@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST icalendar-1.1.0.gem 384000 RMD160 1a80669e48c1ff7fc76914c641e717050ddab285 SHA1 556589e246fb539b7a49398407fd7e6e5e1fd1bb SHA256 71ce3670d322a1690e333055d9906cb2dbf1c548cd8f8b20cb9c52ba2c8a9b71
 DIST icalendar-1.1.3.gem 49664 RMD160 38b17fdb899c19562fe62d7b70ca0a55528d48fc SHA1 27d0073d30e7a4631d5b77e398d62439289a9bae SHA256 986dfcc592bc3d716233409962a5dea54ad62766665114c54fc3994806855deb
+DIST icalendar-1.1.4.gem 49664 RMD160 91f65480d8c1c8c1e205f383dc88ea8c95c0198c SHA1 fc92cbb8ff16a482b9da5e6089476398c19cc22f SHA256 273d9c4d71d8bb570fc599d9e53226f8c32b28ae5e1e0dc790e0ac8ae032c8c6
 EBUILD icalendar-1.1.0.ebuild 429 RMD160 b1a5b3ab65c3c09ed418bbd27733051ac8751be1 SHA1 98f88b3745305ae07438ce68cbe4221980c6c6bf SHA256 b14cd5fb1641143d2d968529de47cc3ca2194e4e68aee56e1f99723a94fd5d00
 EBUILD icalendar-1.1.3.ebuild 800 RMD160 82a916580409990aa4115c81cd1986798d81b9d0 SHA1 0ad1e691621b1fc1a2899fd0fd10eb87156fb07b SHA256 5296482957fd064f4a0a388e6d36fe55e5b9120321c79f2cee5a30da1a5172f3
-MISC ChangeLog 309 RMD160 b6ab2227c5ecb7071e2bdb8c4adc847e1ddf4fb3 SHA1 c5e34c4499ad993aaaf03a590f3bdb62a10699e4 SHA256 c57370f82ea83a5119268d6be1ed33292d19266d11900bb03e58983924991bf1
+EBUILD icalendar-1.1.4.ebuild 800 RMD160 82a916580409990aa4115c81cd1986798d81b9d0 SHA1 0ad1e691621b1fc1a2899fd0fd10eb87156fb07b SHA256 5296482957fd064f4a0a388e6d36fe55e5b9120321c79f2cee5a30da1a5172f3
+MISC ChangeLog 448 RMD160 357c896305157b9c3b87573ff0af60e2d4db8772 SHA1 6ffe54e9caa432fcd6ce866788754c7efe827279 SHA256 8c689d79567619f1c31c7b0337e4f94dc3129b6971bc4ad6502d925b2a080ad4
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuwRogACgkQeM7EJeUH71NwZgCbBOQvE8U1CpD8Nk7v5n131nba
-gYkAn3XsaFPPZC2scMO+RK5g/MX77MIE
-=HCGa
+iEYEARECAAYFAkvkAt4ACgkQeM7EJeUH71P/dwCfY8Aux8E1g6CYzkTB9SXlVUOj
+uo4An1KTajbuFHWp3L7orr7Srf7ZSYpd
+=hU89
 -----END PGP SIGNATURE-----
