@@ -1,0 +1,30 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
+
+EAPI="2"
+USE_RUBY="ruby18"
+
+RUBY_FAKEGEM_TASK_DOC="docs"
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="History.txt README.rdoc"
+
+inherit ruby-fakegem
+
+DESCRIPTION="This library provides iCalendar support for ruby. (RFC-2445)"
+HOMEPAGE="http://icalendar.rubyforge.org/"
+LICENSE="GPL-2"
+
+KEYWORDS="~x86 ~amd64"
+SLOT="0"
+IUSE=""
+
+# Restricting tests for now. The timezone test fails. Reported
+# upstream as http://github.com/sdague/icalendar/issues/issue/1
+RESTRICT="test"
+
+ruby_add_bdepend test virtual/ruby-test-unit
+
+all_ruby_prepare() {
+	sed -i '/newgem/d' Rakefile || die
+}
